Added the unordered ingredients list

--- a/tropicalTurkeySalad.html
+++ b/tropicalTurkeySalad.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1>Tropical Turkey Salad</h1>
+    <img src="dishPlated.webp" alt="Tuna Salad on Plate" width="250" height="250"> 
+    <img src="dishWrapped.webp" alt="Tuna Salad Wrap" width="250" height="250"> 
+    <h2>Dish Description</h2>
+        <p>A tropical twist on the Waldorf Salad! Turkey breast and pineapple are tossed with crisp celery, red bell pepper, and green onion, finished with a creamy curried mango dressing.</p>
+    <h3>Ingredients</h3>    
+        <ul>
+            <li>⅓ cup low-fat sour cream</li>
+            <li>2 tablespoons mango chutney</li>
+            <li>1 tablespoon fresh lemon juice</li>
+            <li>1 tablespoon honey</li>
+            <li>¼ teaspoon curry powder</li>
+            <li>4 cups chopped cooked turkey</li>
+            <li>1 cup diced red bell pepper</li>
+            <li>1 cup diced celery</li>
+            <li>1 cup pineapple chunks</li>
+            <li>1 cup chopped orange segments</li>
+            <li>½ cup chopped green onion</li>
+        </ul>
 </body>
 </html>
