created a folder for images and updated image links

--- a/tropicalTurkeySalad.html
+++ b/tropicalTurkeySalad.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Tropical Turkey Salad</h1>
-    <img src="dishPlated.webp" alt="Tuna Salad on Plate" width="250" height="250"> 
-    <img src="dishWrapped.webp" alt="Tuna Salad Wrap" width="250" height="250"> 
+    <img src="./images/dishPlated.webp" alt="Tuna Salad on Plate" width="250" height="250"> 
+    <img src="./images/dishWrapped.webp" alt="Tuna Salad Wrap" width="250" height="250"> 
     <h2>Dish Description</h2>
         <p>A tropical twist on the Waldorf Salad! Turkey breast and pineapple are tossed with crisp celery, red bell pepper, and green onion, finished with a creamy curried mango dressing.</p>
     <h3>Ingredients</h3>    
