finished the turkey salad recipe page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="tropicalTurkeySalad.html">Tropical Turkey Salad</a>
+        <ul>
+            <li><a href="tropicalTurkeySalad.html">Tropical Turkey Salad</a></li>
+            
+        
+        </ul>
 </body>
 </html>
