--- a/tropicalTurkeySalad.html
+++ b/tropicalTurkeySalad.html
@@ -26,5 +26,10 @@
             <li>1 cup chopped orange segments</li>
             <li>½ cup chopped green onion</li>
         </ul>
+        <ol>
+            <li>Place chopped turkey meat, sour cream, honey, and curry powder into a bowl and stir until thoroughly mixed.</li>
+            <li>Take the above mixture and add in the red of the ingredients. Slightly mix until all ingredients are spread out.</li>
+            <li>Refriderate for four hours and serve</li>
+        </ol>
 </body>
 </html>
