--- a/creamyBakedPolenta.html
+++ b/creamyBakedPolenta.html
@@ -7,6 +7,35 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Creamy Baked Polenta and Mushrooms</h1>
+    <img src="./images/creamyBakedPolenta.webp" alt="Tuna Salad on Plate" width="500" height="500"> 
+    <h2>Dish Description</h2>
+        <p>Baked polenta and mushrooms for a hearty, satisfying meatless meal.</p>
+    <h3>Ingredients</h3>    
+        <ul>
+            <li>4 ½ cups water</li>
+            <li>1 ¾ cups cornmeal</li>
+            <li>½ cup grated Parmesan cheese, divided</li>
+            <li>1 large egg yolk</li>
+            <li>4 tablespoons melted butter, divided</li>
+            <li>½ teaspoon salt</li>
+            <li>1 pinch ground nutmeg</li>
+            <li>3 tablespoons olive oil</li>
+            <li>1 tablespoon butter</li>
+            <li>1 medium onion, sliced</li>
+            <li>1 pound fresh mushrooms, sliced</li>
+            <li>⅓ cup brandy</li>
+            <li>3 cloves garlic, minced</li>
+            <li>2 tablespoons dry bread crumbs</li>
+            <li>1 tablespoon dried parsley</li>
+        </ul>
+        <ol>
+            <li>Butter a 8x12-inch rimmed baking sheet. Bring water to a boil in a saucepan. Add cornmeal and whisk. Cook until mixture pulls away from the sides of the saucepan, stirring constantly, 5 to 7 minutes.</li>
+            <li>Stir in 1/4 cup Parmesan cheese, egg yolk, 2 tablespoons melted butter, salt, and nutmeg. Pour onto the prepared baking sheet and spread into a rectangle about 1/2 inch thick. Cool for at least 2 hours. Trim edges and cut into 1-inch cubes.</li>
+            <li>Heat olive oil and 1 tablespoon butter in a skillet over medium-high heat. Add onions and saute for 5 minutes. Add mushrooms and cook for 5 minutes. Stir in brandy and garlic; heat through, about 5 minutes more. The mixture should be saucy.</li>
+            <li>Preheat the oven to 400 degrees F (200 degrees C). Butter a large baking dish.</li>
+            <li>Place polenta cubes in the prepared baking dish, top with mushroom mixture, including juices. Mix remaining 1/4 cup Parmesan cheese, remaining 2 tablespoons melted butter, bread crumbs, and dried parsley together in a bowl. Sprinkle bread crumb mixture on top of mushrooms.</li>
+            <li>Bake in the preheated oven until browned and bubbly, about 30 minutes.</li>
+        </ol>
 </body>
 </html>
