created a third recipe page

--- a/creamyBakedPolenta.html
+++ b/creamyBakedPolenta.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Creamy Baked Polenta and Mushrooms</h1>
-    <img src="./images/creamyBakedPolenta.webp" alt="Tuna Salad on Plate" width="500" height="500"> 
+    <img src="./images/creamyBakedPolenta.webp" alt="Baked Polenta and Mushrooms" width="500" height="500"> 
     <h2>Dish Description</h2>
         <p>Baked polenta and mushrooms for a hearty, satisfying meatless meal.</p>
     <h3>Ingredients</h3>    
