--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="tropicalTurkeySalad.html">Tropical Turkey Salad</a></li>
             <li><a href="creamyBakedPolenta.html">Creamy Baked Polenta and Mushrooms</a></li>    
-        
+            <li><a href="baconRanchCheeseBall.html">Bacon Ranch Cheese Ball</a></li> 
         </ul>
 </body>
 </html>
